# 01-python-fundamentals

./: 01_syntax_basics.ipynb  02_data_structures_core.ipynb  03_control_flow.ipynb  04_functions_and_decorators.ipynb  05_classes_objects_oop_light.ipynb  06_modules_imports_debugging.ipynb  07_context_managers.ipynb  08_env_and_secrets.ipynb  09_typing_pydantic_vs_typedict.ipynb  README.md  pyproject.toml
