[project]
name = "python-fundamentals"
version = "0.1.0"
description = "Compact Python fundamentals with clean notebooks and a minimal app teaser."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jaime Lucena", email = "jaimelucena93@gmail.com" }]
license = { file = "LICENSE" }

# Keep deps minimal but useful for notebooks and later chapters
dependencies = [
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.37.0",
  "pytest>=8.0.0",
  "typing-extensions>=4.11.0"
]

[tool.uv]
managed = true